--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
+*{
+    margin :0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body{
+    height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background-color:aliceblue;
+    width:100%;
+}
+.App{
+    background-color:black;
+    max-width:400px;
+    padding:5px;
+    outline:2px solid grey;
+}
+.output span{
+display:block;
+text-align:right;
+
+}
+.output .input{
+font-size:25px;
+color:white;
+height:30px;
+
+
+}
+.output .result{
+    color:rgb(234, 183, 0);
+    font-size:10px;
+    height:25px;
+}
+.keys{
+    display:grid;
+   grid-template-columns: repeat(4,80px);
+   grid-gap:2px;
+}
+.keys button{
+    height:70px;
+    width:80px;
+    outline:none;
+    border:none;
+    background-color:rgb(78, 78, 78);
+    color:white;
+    font-weight:bold;
+    font-size:15px;
+}
+.keys button:hover{
+    outline:1px solid white;
+    color:black;
+}
+.keys #clear, #zero{
+   grid-column:span 2;
+   width:162px
+}
+#clear{
+    background-color:rgb(175, 67, 67);
+}
+#equals{
+    height: 142px; 
+    grid-row:span 2;
+    background-color:rgb(61, 87, 115);
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#add,#subtract,#multiply,#divide{
+    background-color:grey;
 }
